# CommonLibF4

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  offset2id.py  patch_IDS.mjs  vcpkg.json
include/F4SE/: Interfaces.hpp  Version.hpp
include/F4SE/Impl/: PCH.hpp
include/RE/: Fallout.hpp  IDs.hpp  NiRTTI_IDs.hpp  RTTI.hpp  RTTI_IDs.hpp  VTABLE_IDs.hpp
include/RE/Bethesda/: AITimeStamp.hpp  ActiveEffect.hpp  Actor.hpp  ActorValueInfo.hpp  Archive2.hpp  BGSCreatedObjectManager.hpp  BGSDefaultObjectManager.hpp  BGSDynamicPersistenceManager.hpp  BGSEntryPoint.hpp  BGSInventoryInterface.hpp  BGSInventoryItem.hpp  BGSMod.hpp  BGSSaveLoad.hpp  BGSStoryEventManager.hpp  BGSStoryManagerTreeForm.hpp  BGSSynchronizedAnimationManager.hpp  BSAudioManager.hpp  BSExtraData.hpp  BSGraphics.hpp  BSGraphicsUtility.hpp  BSHavok.hpp  BSInputDeviceManager.hpp  BSInputEnableManager.hpp  BSLock.hpp  BSModelDB.hpp  BSPointerHandle.hpp  BSRandom.hpp  BSResource.hpp  BSScaleformManager.hpp  BSScriptUtil.hpp  BSShaderProperty.hpp  BSSoundHandle.hpp  BSStringPool.hpp  BSSystemFileStreamer.hpp  BSSystemUtility.hpp  BSTEvent.hpp  BSTThreadScrapFunction.hpp  BSTempEffect.hpp  BSTextureSet.hpp  BSTimer.hpp  (+60 more)
include/RE/Bethesda/BSResource/: Entry.hpp  GlobalLocations.hpp  GlobalPaths.hpp
include/RE/Bethesda/BSScript/: ArrayWrapper.hpp  Stack.hpp
include/RE/Bethesda/BSScript/NF_util/: NativeFunctionBase.hpp
include/RE/Havok/: hkLifoAllocator.hpp  hkMemoryRouter.hpp  hknpClosestHitCollector.hpp
include/RE/NetImmerse/: NiAlphaProperty.hpp  NiController.hpp  NiNode.hpp  NiRefObject.hpp  NiTCollection.hpp  NiTexture.hpp
include/RE/Scaleform/GFx/: GFx_ASString.hpp  GFx_Loader.hpp  GFx_Player.hpp
include/RE/Scaleform/Kernel/: SF_Memory.hpp  SF_SysAlloc.hpp
include/RE/msvc/: typeinfo.hpp
include/REL/: Common.hpp  ID.hpp  IDDB.hpp  Module.hpp  Offset.hpp  Relocation.hpp
src/RE/Bethesda/: BSResource.cpp  BSResourceNiBinaryStream.cpp  BSScaleformManager.cpp  MenuCursor.cpp  Misc.cpp  TESDataHandler.cpp  TESForms.cpp
src/RE/Bethesda/BSScript/: Object.cpp  ObjectTypeInfo.cpp
src/RE/NetImmerse/: NiMatrix3.cpp  NiPoint.cpp
src/REL/: IDDB.cpp  Module.cpp
